
CR = Change Request item
Local-only = Changes not reflected in Source Code
Backend = Change is not user facing

## [2016-01-30] [Since 2016-01-23 Integration]
### Fixed:
- #304: Only try to go to another specialization if procedure filters have been activated
- #305: Collapse updates by date and record

## [2016-01-23] [Since 2016-01-16 Integration]
### Added:
- User profile page now shows date of Last Vist and Sign Up

### Changed:
- All Specialists admin page now shows total numbers of Specialists by division
- Backend: Upgraded Ruby version to 2.2.3 from 2.1.6

### Fixed:
- #254: removed 'fee structure info available' checkbox
- #154: token editors can no longer remove clinic locations or specialist offices
- #298: updates to specialist offices and clinic locations being lost

## [2016-01-16] [Since 2016-01-09 Integration]
### Changed:
- #154: Clinic form now asks users to confirm before deleting location
- #283: Improved results sorting on specialization pages
- #50: Browse 'More' latest updates
- CR #245: Emails must now be written in twice on sign up to confirm accuracy.

### Fixed:
- #251: Quick sharing/unsharing content items from their show page
- Recache tasks now fail individually and send error messages to our emails
- We are notified via email when the recache begins
- Latest Updates to office openings are shown even if the office hasn't opened
recently

## [2016-01-09] [Since 2016-01-02 Integration]
### Added:
- Finish CR (#276): Add GP-like suffix labels to Nurse Practitioners (Nurse), Midwives (Midwife), and Internal Medicine (Int Med) specialties in filter table.

### Changed:
- System Notification recipients are now notified if a deceased specialist is deleted from the database.
- Improved css hover effects on front page for: Specialties / Featured Content
- Search box now tells browsers to disable autocomplete
- Security updates

### Fixed: