@@ -23,6 +23,7 @@ Frasernw::Application.routes.draw do
   resources :secret_tokens, only: [:create, :destroy]
 
   resources :latest_updates, only: [:index]
+  resources :latest_updates_masks, only: [:create]
 
   resources :clinics do
     member do
